<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/moviesFragment"
        android:title="@string/movies"
        android:enabled="true"
        android:icon="@drawable/ic_bx_movie" />

    <item
        android:id="@+id/seriesFragment"
        android:title="@string/tv_shows"
        android:enabled="true"
        android:icon="@drawable/ic_bx_tv"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/tv_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_bx_heart_unfill"
        tools:ignore="HardcodedText" />
</menu>